fix formatting on mobile. optimize header. add "about" page

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -68,3 +68,8 @@ a.green {
   background-color:#377cb4;
   color:#000;
 }
+
+figure.nomargin {
+  margin-left: 0;
+  margin-right: 0;
+}
